@@ -177,7 +177,8 @@ ESTIMATION <- function(data, model, group, itemtype = NULL, guess = 0, upper = 1
         r <- r[, ncol(r)]
         rr <- rr + r
         df <- df + sum(r != 0) - 1L
-    }    
+    }
+    if(!is.null(opts$technical$override.df)) df <- 999L
     nestpars <- nconstr <- 0L
     for(g in 1L:Data$ngroups)
         for(i in 1L:(nitems+1L))
