@@ -3,9 +3,10 @@
 \title{Methods for Function fscores}
 \usage{
   fscores(object, rotate = "", full.scores = FALSE,
-    method = "EAP", quadpts = NULL, response.vector = NULL,
-    degrees = NULL, returnER = FALSE, mean = NULL,
-    cov = NULL, verbose = TRUE, scores.only = FALSE)
+    method = "EAP", quadpts = NULL,
+    response.pattern = NULL, degrees = NULL,
+    returnER = FALSE, mean = NULL, cov = NULL,
+    verbose = TRUE, scores.only = FALSE)
 }
 \arguments{
   \item{object}{a computed model object of class
@@ -44,10 +45,9 @@
   \code{\link{iteminfo}}, only necessary for
   multidimensional models when \code{method = 'WLE'}}
 
-  \item{response.vector}{an optional argument used to
+  \item{response.pattern}{an optional argument used to
   calculate the factor scores and standard errors for a
-  given response vector that may or may not have been in
-  the original dataset}
+  given response vector or matrix}
 
   \item{returnER}{logical; return empirical reliability
   estimate as a numeric value?}
@@ -82,7 +82,9 @@ scores <- fscores(mod, full.scores = TRUE, scores.only = TRUE)
 head(scores)
 
 #calculate MAP for a given response vector
-fscores(mod, method='MAP', response.vector = c(1,2,3,4))
+fscores(mod, method='MAP', response.pattern = c(1,2,3,4))
+#or matrix
+fscores(mod, method='MAP', response.pattern = rbind(c(1,2,3,4), c(2,2,1,3)))
 
 #use custom latent variable properties (diffuse prior for MAP is very close to ML)
 fscores(mod, method='MAP', cov = matrix(1000))
